preview implementation products

--- a/css/home.css
+++ b/css/home.css
@@ -15,3 +15,17 @@
     position: sticky !important;
     top: 0;
 }
+
+.image.caption {
+    position: absolute; 
+    bottom: 0;
+
+    padding: 1em;
+
+    width: 100%;
+    height: auto;
+
+    color: white;
+
+    background: rgba(27, 28, 29, 0.7);
+}
