--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,73 @@
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-Hairline.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-HairlineItalic.ttf') format('truetype');
+    font-weight: 100;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-RegularItalic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-BoldItalic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato-BlackItalic.ttf') format('truetype');
+    font-weight: 900;
+    font-style: italic;
+}
+
 .banner {
     overflow: hidden;
 
@@ -28,4 +98,28 @@
     color: white;
 
     background: rgba(27, 28, 29, 0.7);
+}
+
+.ui.important.menu {
+    z-index: 999;
+}
+
+.ui.simple.active.dropdown>.menu {
+    overflow: hidden;
+    width: 0;
+    height: 0;
+    top: -9999px !important;
+    opacity: 0;
+}
+
+.ui.simple.dropdown:hover>.menu {
+    overflow: visible;
+    width: auto;
+    height: auto;
+    top: 100% !important;
+    opacity: 1;
+}
+
+a.ui.card:hover {
+    transform: none !important;
 }
