--- a/css/home.css
+++ b/css/home.css
@@ -68,6 +68,10 @@
     font-style: italic;
 }
 
+body {
+    height: auto !important;
+}
+
 .banner {
     overflow: hidden;
 
@@ -77,11 +81,12 @@
 
 .banner h1 {
     margin-top: 1.5em !important;
+    margin-bottom: 1.5em !important;
 
     font-size: 4em !important;
 }
 
-.ui.menu {
+.ui.important.menu {
     position: sticky !important;
     top: 0;
 }
@@ -122,4 +127,8 @@
 
 a.ui.card:hover {
     transform: none !important;
+}
+
+.footer {
+    height: 110px;
 }
