--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-@font-face {
+-@font-face {
     font-family: 'Lato';
     src: url('../assets/fonts/Lato-Hairline.ttf') format('truetype');
     font-weight: 100;
@@ -123,6 +123,10 @@ body {
     height: auto;
     top: 100% !important;
     opacity: 1;
+}
+
+a.ui.card {
+    overflow: hidden;
 }
 
 a.ui.card:hover {
