--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
--@font-face {
+@font-face {
     font-family: 'Lato';
     src: url('../assets/fonts/Lato-Hairline.ttf') format('truetype');
     font-weight: 100;
