--- a/css/main-product.css
+++ b/css/main-product.css
@@ -1,3 +1,7 @@
+.ui.title.header {
+    text-transform: uppercase;
+}
+
 h1.ui.title.header {
     font-size: 4em !important;
     font-weight: normal;
